--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <link
+      <!-- <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
   crossorigin="anonymous"
-/>
+/> -->
 <link
 rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -50,7 +50,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+  <!-- <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
 
 <script
   src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
@@ -58,7 +58,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <script
   src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
+  crossorigin></script> -->
 
-<script>var Alert = ReactBootstrap.Alert;</script>
+<!-- <script>var Alert = ReactBootstrap.Alert;</script> -->
 </html>
